--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ Resources:
  - TargetService:
      Type: AWS::ECS::Service
      Properties:
-       TaskDefinition: <task_definition>
+       TaskDefinition: <TASK_DEFINITION>
        LoadBalancerInfo:
          ContainerName: "demo"
          ContainerPort: 5000
