--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,3 +20,7 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - printf '[{"name":"demo","imageUri":$REPOSITORY_URI:$IMAGE_TAG}]' > imageDetail.json
+artifacts:
+  files:
+    - imageDetail.json
